resources/css/style.css
html {
  font-family: Helvetica;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
  text-align: center;
  margin: 0;
  padding: 0;
}

/*Header*/

header {
  height: 69px;
  align-items: center;
  background-color: black;
  position: fixed;
  width: 100%;
}

div {
  display: block;
}

body {
  margin: 0;
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;

}

.logo {
  display: flex;
  align-items: center;
  position: relative;
}

.logo img {
    align-items: center;
    padding-left: 10px;
    height: 50px;
}

.options {
  display: inline-flex;
  align-items: center;
  padding-right: 10px;
}

.options li {
  position: relative;
  padding: 0 8px;
  list-style: none;
  text-decoration: underline;
}

/*Banner*/

.banner {
  width: 100%;
  margin-left: 20px;
}

.banner.container {
  background-image: url("../media/img-mission-background.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 1200px;
  height: 700px;
  display: flex;
  align-items: center;
}

.banner-text {
  position: relative;
  background-color: black;
  width: 100%;
}

/*Main Content*/

.main {
  width: 100%;
  margin-left: 20px;
}

.main.container {
  width: 1200px;
}

.main-text{
  width: 100%;
}

.tea-types {
  display: flex;
  justify-content: center;
  flex-direction: row;
  align-items: center;
}

.tea {
  width: 300px;
  padding: 10px;
}

.image img {
  width: 300px;
  height: 200px;
}

.description{
  position: relative;
  float: bottom;
}

/*Location*/

.location{
  width: 100%;
  height: 500px;
  margin-left: 20px;
}

.location.container {
  width: 1200px;
  background-image: url("../media/img-locations-background.jpg");
  background-position: center;
  background-repeat: no-repeat;

}

.location-text {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.location-title {
  padding-top: 50px;
  padding-bottom: 15px;
}

.box{
  display: flex;
  flex-direction: column;
  height: 300px;
  width: 300px;
  background-color: black;
  justify-content: center;
  align-items: center;
}

/*Contact*/

.contact{
  width: 100%;
  margin-left: 20px;
}
.contact.container {
  width: 1200px;
}

/*Footer*/

footer {
  width: 100%;
}

